# semantic-sdp-cpp

./: CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt
src/semantic_sdp_cpp/lib/: CMakeLists.txt  candidate_info.h  codec_info.h  crypto_info.h  data_channel_info.h  direction.h  direction_way.h  dtls_info.h  ice_info.h  media_info.h  rid_info.h  rtcp_feedback_info.h  setup.h  simulcast_info.h  simulcast_stream_info.h  source_group_info.h  source_info.h  stream_info.h  track_encoding_info.h  track_info.h  util.h
src/semantic_sdp_cpp/test/unittest/: CMakeLists.txt  main.cpp
